--- a/index.html
+++ b/index.html
@@ -12,46 +12,150 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
+            <div class="col-1">
+                <div class="card">
+                    <h1>1 col</h1>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="card">
+                    <h1>1 col</h1>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="card">
+                    <h1>1 col</h1>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="card">
+                    <h1>1 col</h1>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="card">
+                    <h1>1 col</h1>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="card">
+                    <h1>1 col</h1>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="card">
+                    <h1>1 col</h1>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="card">
+                    <h1>1 col</h1>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="card">
+                    <h1>1 col</h1>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="card">
+                    <h1>1 col</h1>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="card">
+                    <h1>1 col</h1>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="card">
+                    <h1>1 col</h1>
+                </div>
+            </div>
         </div>
         <div class="row">
-            <div class="col-12">12 col</div>
+            <div class="col-12">
+                <div class="card">
+                    <h1>12 col</h1>
+                </div>
+            </div>
         </div>
         <div class="row">
-            <div class="col-8">8 col</div>
-            <div class="col-2">2 col</div>
-            <div class="col-2">2 col</div>
+            <div class="col-8">
+                <div class="card">
+                    <h1>8 col</h1>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="card">
+                    <h1>2 col</h1>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="card">
+                    <h1>2 col</h1>
+                </div>
+            </div>
         </div>
         <div class="row">
-            <div class="col-1">1 col</div>
-            <div class="col-2">2 col</div>
-            <div class="col-2">2 col</div>
-            <div class="col-6">6 col</div>
-            <div class="col-1">1 col</div>
+            <div class="col-1">
+                <div class="card">
+                    <h1>1 col</h1>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="card">
+                    <h1>2 col</h1>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="card">
+                    <h1>2 col</h1>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="card">
+                    <h1>6 col</h1>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="card">
+                    <h1>1 col</h1>
+                </div>
+            </div>
         </div>
         <div class="row">
             <div class="col-6">
                 <div class="row">
-                    <div class="col-2">Nested 2 col</div>
-                    <div class="col-2">Nested 2 col</div>
-                    <div class="col-8">Nested 8 col</div>
+                    <div class="col-2">
+                        <div class="card">
+                            <h1>Nested 2 col</h1>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="card">
+                            <h1>Nested 2 col</h1>
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <div class="card">
+                            <h1>Nested 8 col</h1>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-6">
                 <div class="row">
-                    <div class="col-6">Nested 6 col</div>
-                    <div class="col-6">Nested 6 col</div>
+                    <div class="col-6">
+                        <div class="card">
+                            <h1>Nested 6 col</h1>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="card">
+                            <h1>Nested 6 col</h1>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
